# agentcore-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py
agent/: app.py  config.py  pyproject.toml
agent/knowledge_base/docs/: agentic-search.md
agent/knowledge_base/src/: example_agent.py
docs/: claude-session-strategy.md  design.md
docs/knowledge_base/docs/: yamanashi-omiyage.md  yamanashi-winery.md  yamanashi.md
infra/: package-lock.json  package.json
infra/lambda/: sync_handler.py
infra/lib/: agentcore-rag-stack.ts
infra/test/: infra.test.ts
knowledge_base/docs/: agentcore-runtime.md
knowledge_base/src/: utils.ts
